# market-representation-lab

./: .gitignore  README.md  pyproject.toml
configs/: lstm.yaml  mamba2.yaml  mamba3.yaml  vsn_lstm.yaml  vsn_mamba2.yaml  vsn_mamba3.yaml
src/: __init__.py
src/data/: __init__.py  alignment.py  calendar.py  continuous_futures.py  loaders.py  pipeline.py  schemas.py  windowing.py
src/evaluation/: __init__.py  clustering.py  evaluate.py  hidden_states.py  metrics.py  trading.py
src/features/: __init__.py  build_features.py  labels.py
src/models/: __init__.py  encoders.py  heads.py  mamba_blocks.py  vsn.py
src/training/: __init__.py  dataset.py  losses.py  train.py
src/utils/: config.py  seed.py
tests/: test_data_pipeline.py  test_models.py
